1999-03-27  Gordon Matzigkeit  <gord@trick.fig.org>

	* grub/asmstub.c (checkkey): Fix unterminated comment.

	* shared_src/char_io.c (grub_printf): Renamed from printf.
	(grub_tolower): Renamed from tolower.
	(grub_isspace): Renamed from isspace.
	(grub_strncat): Renamed from strncat.
	(grub_strstr): Renamed from strstr.
	(grub_bcopy): Renamed from bcopy.
	(grub_bzero): Renamed from bzero.

	From Bradford Hovinen:
	* shared_src/char_io.c (get_cmdline): Add new argument to hide
	password entry.
	(grub_strcmp): New function.
	* shared_src/shared.h (get_cmdline): Fix declaration.
	(grub_strcmp): Declare.
	* shared_src/stage2.c (run_menu): Use get_cmdline with an
	ECHO_CHAR of `*'.  This protects against both brute-force and
	sidelong-glance password cracking attempts.

	* grub/main.c (usage): Display defaults for stage2 options.

	* grub/asmstub.c [WITHOUT_LIBC_STUBS]: Renamed from
	NO_REMAPPING_LIBC_FUNCTIONS.
	* grub/main.c: Likewise.
	* shared_src/shared.h: Likewise.

1999-03-27  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* grub/asmstub.c (set_attrib): Use inch and addch, instead of
	chgat, because chgat doesn't work as expected.

1999-03-26  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* grub/asmstub.c (grub_stage2) [HAVE_LIBCURSES]: Call nodelay.
	(checkkey) [HAVE_LIBCURSES]: If getting an input character, then
	ungetch it, because checkkey shouldn't modify the input queue.

	Use file descriptors instead of file pointers to support
	>4GB disks in Linux.

	* grub/asmstub.c (grub_stage2): Call close instead of fclose.
	(get_diskinfo): Call open instead of fopen.
	(biosdisk) [__linux__]: Use _llseek instead of lseek.
	(biosdisk): Call read instead of fread.

	Add options so that the user can specify the config file.

	* grub/Makefile.am (CPPFLAGS): Use -fwritable-strings, because
	grub assumes that all strings resides at the data section.

	* grub/main.c: Define NO_REMAPPING_LIBC_FUNCTIONS before including
	shared.h.
	(OPT_CONFIG_FILE): New macro.