@@ -581,7 +581,7 @@ ext2fs_dir (char *dirname)
 #endif /* E2DEBUG */
 
       /* copy inode to fixed location */
-      bcopy ((void *) raw_inode, (void *) INODE, sizeof (struct ext2_inode));
+      memmove ((void *) INODE, (void *) raw_inode, sizeof (struct ext2_inode));
 
 #ifdef E2DEBUG
       printf ("first word=%x\n", *((int *) INODE));
@@ -614,7 +614,7 @@ ext2fs_dir (char *dirname)
 	    {
 	      /* Copy the remaining name to the end of the symlink data.
 	         Note that DIRNAME and LINKBUF may overlap! */
-	      bcopy (dirname, linkbuf + filemax, len);
+	      memmove (linkbuf + filemax, dirname, len);
 	    }
 	  linkbuf[filemax + len] = '\0';
 
@@ -631,7 +631,7 @@ ext2fs_dir (char *dirname)
 	    {
 	      /* Copy the data directly from the inode. */
 	      len = filemax;
-	      bcopy ((char *) INODE->i_block, linkbuf, len);
+	      memmove (linkbuf, (char *) INODE->i_block, len);
 	    }
 
 #if E2DEBUG
